<resources>
    <string name="app_name">Cyclo</string>
    <string name="description">Start your</string>
    <string name="description2">adventure</string>
    <string name="cyclo">CYCLO</string>
    <string name="welcome_new_user">New User?</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="signup">New Account</string>
    <string name="Logging_in">Logging in…</string>
    <string name="log_in">Log in</string>
    <string name="creating">Creating…</string>
    <string name="create">Create</string>
    <string name="time_taken">DURATION</string>
    <string name="total_cost">COST</string>
    <string name="total_distance">DISTANCE COVERED</string>
    <string name="default_zero">0.00</string>
    <string name="defaut_time_zero">00:00:00</string>
    <string name="rupees_symbol">\u20B9</string>
    <string name="end_ride">End Ride</string>
    <string name="dashboard_username">Unknown User</string>
</resources>
