<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/text_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/log_in"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_password_login"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/entry_rounded"
        android:ems="10"
        android:textColorHint="@color/hint_gray"
        android:fontFamily="@font/montserrat"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textCursorDrawable="@drawable/cursor_color"
        android:paddingRight="20dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email_login" />

    <EditText
        android:id="@+id/edit_text_email_login"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/entry_rounded"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/hint_gray"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_login" />

    <Button
        android:id="@+id/login_button_login_page"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_rounded_3"
        android:fontFamily="@font/montserrat_bold"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/log_in"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password_login"
        tools:text="@string/log_in" />
</android.support.constraint.ConstraintLayout>